--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#About-Us">About</a></li>
-            <li><a href="other pages/our-programs.html">Our Programs</a></li>
-            <li><a href="other pages/our-team.html">Our Team</a></li>
-            <li><a href="other pages/courses.html">Our Courses</a></li>
-            <li><a href="other pages/assistive-technologies.html">Assistive Technologies</a></li>
-            <li><a href="other pages/publications.html">Publications</a></li>
-            <li><a href="other pages/feedback.html">People's Feedback</a></li>
+            <li><a href="our-programs.html">Our Programs</a></li>
+            <li><a href="our-team.html">Our Team</a></li>
+            <li><a href="courses.html">Our Courses</a></li>
+            <li><a href="assistive-technologies.html">Assistive Technologies</a></li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="feedback.html">People's Feedback</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
